# musicle-gui

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.hpp
src/bridge/: PythonBridge.hpp  PythonBridge.py
src/core/: App.cpp  App.hpp
src/physics/: PhysicsEngine.cpp  PhysicsEngine.hpp
src/render/: RenderEngine.cpp  RenderEngine.hpp  SSBOManager.cpp  SSBOManager.hpp  Shader.cpp  Shader.hpp
src/shaders/: glass.frag  particle.frag  particle.vert  physics.comp
src/ui/: UIEngine.cpp  UIEngine.hpp
